--- a/src/spotify/styles/Footer.css
+++ b/src/spotify/styles/Footer.css
@@ -9,6 +9,7 @@
     display: flex;
     justify-content: space-between;
 }
+
 #footer_left {
     flex: 0.3;
     display: flex;
@@ -24,7 +25,6 @@
     overflow: hidden;
     text-overflow: ellipsis;
     white-space: nowrap;
-    /* font-size: 14px; */
 }
 
 #footer_songArtists {
@@ -34,37 +34,42 @@
     color: #B3B3B3;
     font-size: 11px;
 }
+
 #footer_albumCover {
     height: 50px;
     width: 50px;
     margin-right: 20px;
     object-fit: contain;
 }
+
 #footer_center {
     flex: 0.4;
     padding: 0 100px;
     display: flex;
-    /* align-items:flex-start; */
     justify-content: center;
     flex-direction: column;
-    /* max-width: 300px; */
 }
+
 #footer_center_controls {
     display: flex;
     justify-content: space-evenly;
     align-items: center;
 }
+
 #footer_center_slider {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
 }
-/* #footer_center_slider::before {
-    content: "3.30";
-}
-#footer */
+
 #footer_right {
     flex: 0.3;
     display: flex;
     align-items: center;
     justify-content: flex-end;
 } 
+
+#seekbar {
+    width: 500px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
